fixed meal ingredients, fixed search bar and meal spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.flex-8 {
+  flex-basis: calc(100% / 8 - 16px);
+}
